--- a/Anime.html
+++ b/Anime.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Anime-Head.css">
-    <link rel="stylesheet" href="Anime-Main.css">
+    <link rel="stylesheet" href="CSS/Anime-Head.css">
+    <link rel="stylesheet" href="CSS/Anime-Main.css">
 </head>
 <body>
     <header>
@@ -47,7 +47,7 @@
             <div class="topic">
                 <h2>Top Rated</h2>
                 <div class="container">
-                    <a>
+                    <a href="aot.html">
                         <div>
                             <img src="https://resizing.flixster.com/SEKqvD_3s-g47nWx0tsZykurPvQ=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p10873160_b_v8_aa.jpg" alt="Attack on Titan">
                             <h3>Attack on Titan</h3>
@@ -61,7 +61,7 @@
                             <p>Two brothers search for a Philosopher's Stone after an attempt to revive their deceased mother goes awry and leaves them in damaged physical forms.</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="onepiece.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
                             <h3>One Piece</h3>
@@ -103,7 +103,7 @@
                             <p>In ancient China, a young boy dreams of becoming the greatest general of the Qin Kingdom.</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="onepiece.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
                             <h3>One Piece</h3>
