--- a/onepiece.html
+++ b/onepiece.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece</title>
-    <link rel="stylesheet" href="CSS/Anime-Head.css">
+    <link rel="stylesheet" href="Anime-Head.css">
     <style>
         body{
             background-color: black;
