Added more webpages and added the link to those on main page. Also removed some expired links and added new links(videos).

--- a/Anime.html
+++ b/Anime.html
@@ -54,7 +54,7 @@
                             <p>After his hometown is destroyed, young Eren Jaeger vows to cleanse the earth of the giant humanoid Titans that have brought humanity to the brink of extinction.</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="fmab.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BMzNiODA5NjYtYWExZS00OTc4LTg3N2ItYWYwYTUyYmM5MWViXkEyXkFqcGc@._V1_.jpg" alt="FMAB">
                             <h3>Fullmetal Alchemist: Brotherhood</h3>
@@ -68,21 +68,21 @@
                             <p>Rubber-bodied dreamer Monkey D. Luffy gathers an eclectic pirate crew and braves the perilous Grand Line, battling tyrants and monsters to claim the legendary "One Piece" and become King of the Pirates.</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="HunterxHunter.html">
                         <div>
                             <img src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
                             <h3>Hunter x Hunter</h3>
                             <p>Gon Freecss aspires to become a Hunter, an exceptional being capable of greatness. With his friends and his potential, he seeks out his father, who left him when he was younger.</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="bleach.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BOWQwOWY5NTUtMjAyZi00YjQzLTkwODgtNmQwZjU1MGIzZDhjXkEyXkFqcGc@._V1_.jpg" alt="Bleach">
                             <h3>Bleach</h3>
                             <p>High school student Ichigo Kurosaki, who has the ability to see ghosts, gains soul reaper powers from Rukia Kuchiki and sets out to save the world from "Hollows".</p>
                         </div>
                     </a>
-                    <a>
+                    <a href="death-note.html">
                         <div>
                             <img src="https://m.media-amazon.com/images/M/MV5BYTgyZDhmMTEtZDFhNi00MTc4LTg3NjUtYWJlNGE5Mzk2NzMxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Death Note">
                             <h3>Death Note</h3>
@@ -124,7 +124,7 @@
                             <p>A superhero-admiring boy enrolls in a prestigious hero academy and learns what it really means to be a hero, after the strongest superhero grants him his own powers.    </p>
                         </div>
                     </a>
-                    <a>
+                    <a href="tybw.html">
                         <div>
                             <img src="https://cdn.myanimelist.net/images/anime/1908/135431.jpg" alt="Bleach: TYBW">
                             <h3>Bleach: Thousand-Year Blood War</h3>
