--- a/HunterxHunter.html
+++ b/HunterxHunter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Piece</title>
+    <title>Hunter x Hunter</title>
     <link rel="stylesheet" href="Anime-Head.css">
     <style>
         body{
@@ -20,6 +20,9 @@
             /* position: relative; */
             /* left: 22vw; */
             margin-bottom: 10px;
+        }
+        video{
+            object-fit: fill;
         }
         .poster{
             flex: 1;
@@ -55,9 +58,6 @@
             /* text-align: center; */
             font-weight: bold;
             color: rgb(168, 146, 9);
-        }
-        video{
-            object-fit: fill;
         }
     </style>
 </head>
@@ -95,24 +95,38 @@
     </header>
     <main>
         <div>
-            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
+            <img class="poster" src="https://cdn.anisearch.de/images/anime/cover/7/7963_600.webp" alt="Hunter x Hunter">
+            <a class="trailer" href="https://imdb-video.media-imdb.com/vi1267121689/1434659607842-pgv4ql-1585928266069.mp4?Expires=1761244593&Signature=C3r8Gyp8C3TZNlByDvA-l6P6~CmZZBbYQduUORjYx~hASwjhIU1Te0XTm~nzm64-hCdfvvKHC0tlTpZLKDfGbU3nI2s9Wvq~RXGsKREG2LXmJh3yIFjXpgbjqAY32jKDuLhsXS~Y2NS4u6gz82H0S9fkHmW3YlWNnMfi7vFnmmQswcLrW7TIrTOm8fbXZjYhBEvNJRar3u4JHFrGJy13a7RDldaBECaXu0IXkzP2K9XrBzS3NfG13TynQHKaOHhhd3gmd1r77Id-AcxF2Xg0XYzggxZl9XmNzHytti~1re2akxXpmktdajuFxLrOazQHiWvX6RlSZy-oMYZlKfutTg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
+                <video src="https://imdb-video.media-imdb.com/vi1267121689/1434659607842-pgv4ql-1585928266069.mp4?Expires=1761244593&Signature=C3r8Gyp8C3TZNlByDvA-l6P6~CmZZBbYQduUORjYx~hASwjhIU1Te0XTm~nzm64-hCdfvvKHC0tlTpZLKDfGbU3nI2s9Wvq~RXGsKREG2LXmJh3yIFjXpgbjqAY32jKDuLhsXS~Y2NS4u6gz82H0S9fkHmW3YlWNnMfi7vFnmmQswcLrW7TIrTOm8fbXZjYhBEvNJRar3u4JHFrGJy13a7RDldaBECaXu0IXkzP2K9XrBzS3NfG13TynQHKaOHhhd3gmd1r77Id-AcxF2Xg0XYzggxZl9XmNzHytti~1re2akxXpmktdajuFxLrOazQHiWvX6RlSZy-oMYZlKfutTg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
             </a>
         </div>
         <section>
-            <h1>One Piece</h1>
+            <h1>Hunter X Hunter</h1>
             <h3>Synopsis:</h3>
-            <p>Gold Roger was known as the "Pirate King," the strongest and most infamous being to have sailed the Grand Line. The capture and execution of Roger by the World Government brought a change throughout the world. His last words before his death revealed the existence of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece—which promises an unlimited amount of riches and fame—and quite possibly the pinnacle of glory and the title of the Pirate King. Enter Monkey Luffy, a 17-year-old boy who defies your standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate ransacking villages for fun, Luffy's reason for being a pirate is one of pure wonder: the thought of an exciting adventure that leads him to intriguing people and ultimately, the promised treasure. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach the most coveted of all fortunes—<span>One Piece.</span></p>
+            <p>
+                Hunter x Hunter is set in a world where Hunters exist to perform all manner of 
+                dangerous tasks like capturing criminals and bravely searching for lost treasures 
+                in uncharted territories. Twelve-year-old Gon Freecss is determined to become the 
+                best Hunter possible in hopes of finding his father, who was a Hunter himself and 
+                had long ago abandoned his young son. However, Gon soon realizes the path to 
+                achieving his goals is far more challenging than he could have ever imagined. 
+                Along the way to becoming an official Hunter, Gon befriends the lively 
+                doctor-in-training Leorio, vengeful Kurapika, and rebellious ex-assassin Killua. 
+                To attain their own goals and desires, together the four of them take the Hunter 
+                Exam, notorious for its low success rate and high probability of death. Throughout 
+                their journey, Gon and his friends embark on an adventure that puts them through
+                 many hardships and struggles. They will meet a plethora of monsters, creatures, 
+                 and characters—all while learning what being a Hunter truly means.
+            </p>
             <h3>Details:</h3>
             <p>
-                <span>Aired:</span> Oct 20, 1999 to Present<br>
-                <span>Premiered:</span> Fall 1999<br>
-                <span>Duration:</span> 24m<br>
-                <span>Status:</span> Currently Airing<br>
+                <span>Aired:</span> Oct 2, 2011 to Sep 24, 2014<br>
+                <span>Premiered:</span> Fall 2011<br>
+                <span>Duration:</span> 23m<br>
+                <span>Status:</span> Finished Airing<br>
                 <span>IMDB Score:</span> 9.0/10<br>
-                <span>Genre:</span> Action, Comedy, Adventure, Drama, Fantasy, Shounen<br>
-                <span>Studio:</span> Toei Animation
+                <span>Genre:</span> Action, Adventure, Fantasy, Shounen<br>
+                <span>Studio:</span> Madhouse
             </p>
         </section>
     </main>
