--- a/bleach.html
+++ b/bleach.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Piece</title>
+    <title>Bleach</title>
     <link rel="stylesheet" href="Anime-Head.css">
     <style>
         body{
             background-color: black;
+        }
+        video{
+            object-fit: fill;
         }
         main>div:nth-of-type(1){
             display: flex;
@@ -56,9 +59,6 @@
             font-weight: bold;
             color: rgb(168, 146, 9);
         }
-        video{
-            object-fit: fill;
-        }
     </style>
 </head>
 <body>
@@ -95,24 +95,26 @@
     </header>
     <main>
         <div>
-            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
+            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BOWQwOWY5NTUtMjAyZi00YjQzLTkwODgtNmQwZjU1MGIzZDhjXkEyXkFqcGc@._V1_.jpg" alt="Bleach">
+            <a class="trailer" href="https://imdb-video.media-imdb.com/vi2667095577/1434659607842-pgv4ql-1563421387832.mp4?Expires=1761246172&Signature=f8IoTEESWBh6FTbSW9ahEWvKxuJ~PKUXVnbjlxGRMV2NJd~rPINJmW23J6Zaaf~ku3Bl2lhMpsNSU7OumD-NSC9NKIh8h~ddYPBJqN3SMHdXgyoZHQNcaRbSln1wspzvUlcGmSC9IjuBo65nP5wQPKKT-gE3IXAOHV1JRon9hRBWcTMn1P5vsVfc9JnLP9eX~x876hFwMBvvaQEqM5v5d9O4iR36ts6j~NjUNH0pxTDQG6~jZAnkoVTy3J6xLIh5QChbPWJ51RHvp431XcLpK724b2QMjafCXn6VcYTj8I~DL0f5miO8WOzv2iSR8Y8Xq3q1Bj65A~-UnztSH54kOQ__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
+                <video src="https://imdb-video.media-imdb.com/vi2667095577/1434659607842-pgv4ql-1563421387832.mp4?Expires=1761246172&Signature=f8IoTEESWBh6FTbSW9ahEWvKxuJ~PKUXVnbjlxGRMV2NJd~rPINJmW23J6Zaaf~ku3Bl2lhMpsNSU7OumD-NSC9NKIh8h~ddYPBJqN3SMHdXgyoZHQNcaRbSln1wspzvUlcGmSC9IjuBo65nP5wQPKKT-gE3IXAOHV1JRon9hRBWcTMn1P5vsVfc9JnLP9eX~x876hFwMBvvaQEqM5v5d9O4iR36ts6j~NjUNH0pxTDQG6~jZAnkoVTy3J6xLIh5QChbPWJ51RHvp431XcLpK724b2QMjafCXn6VcYTj8I~DL0f5miO8WOzv2iSR8Y8Xq3q1Bj65A~-UnztSH54kOQ__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
             </a>
         </div>
         <section>
-            <h1>One Piece</h1>
+            <h1>Bleach</h1>
             <h3>Synopsis:</h3>
-            <p>Gold Roger was known as the "Pirate King," the strongest and most infamous being to have sailed the Grand Line. The capture and execution of Roger by the World Government brought a change throughout the world. His last words before his death revealed the existence of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece—which promises an unlimited amount of riches and fame—and quite possibly the pinnacle of glory and the title of the Pirate King. Enter Monkey Luffy, a 17-year-old boy who defies your standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate ransacking villages for fun, Luffy's reason for being a pirate is one of pure wonder: the thought of an exciting adventure that leads him to intriguing people and ultimately, the promised treasure. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach the most coveted of all fortunes—<span>One Piece.</span></p>
+            <p>
+                Ichigo Kurosaki is an ordinary high schooler—until his family is attacked by a Hollow, a corrupt spirit that seeks to devour human souls. It is then that he meets a Soul Reaper named Rukia Kuchiki, who gets injured while protecting Ichigo's family from the assailant. To save his family, Ichigo accepts Rukia's offer of taking her powers and becomes a Soul Reaper as a result. However, as Rukia is unable to regain her powers, Ichigo is given the daunting task of hunting down the Hollows that plague their town. However, he is not alone in his fight, as he is later joined by his friends—classmates Orihime Inoue, Yasutora Sado, and Uryuu Ishida—who each have their own unique abilities. As Ichigo and his comrades get used to their new duties and support each other on and off the battlefield, the young Soul Reaper soon learns that the Hollows are not the only real threat to the human world.
+            </p>
             <h3>Details:</h3>
             <p>
-                <span>Aired:</span> Oct 20, 1999 to Present<br>
-                <span>Premiered:</span> Fall 1999<br>
+                <span>Aired:</span> Oct 5, 2004 to Mar 27, 2012<br>
+                <span>Premiered:</span> Fall 2004<br>
                 <span>Duration:</span> 24m<br>
-                <span>Status:</span> Currently Airing<br>
-                <span>IMDB Score:</span> 9.0/10<br>
-                <span>Genre:</span> Action, Comedy, Adventure, Drama, Fantasy, Shounen<br>
-                <span>Studio:</span> Toei Animation
+                <span>Status:</span> Finished Airing<br>
+                <span>IMDB Score:</span> 8.2/10<br>
+                <span>Genre:</span> Action, Adventure, Comedy, Drama, Shounen<br>
+                <span>Studio:</span> Studio Pierrot
             </p>
         </section>
     </main>
