--- a/death-note.html
+++ b/death-note.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Piece</title>
+    <title>Death Note</title>
     <link rel="stylesheet" href="Anime-Head.css">
     <style>
         body{
             background-color: black;
+        }
+        video{
+            object-fit: fill;
         }
         main>div:nth-of-type(1){
             display: flex;
@@ -56,9 +59,6 @@
             font-weight: bold;
             color: rgb(168, 146, 9);
         }
-        video{
-            object-fit: fill;
-        }
     </style>
 </head>
 <body>
@@ -95,24 +95,26 @@
     </header>
     <main>
         <div>
-            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
+            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BYTgyZDhmMTEtZDFhNi00MTc4LTg3NjUtYWJlNGE5Mzk2NzMxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Death Note">
+            <a class="trailer" href="https://imdb-video.media-imdb.com/vi39568921/1434659607842-pgv4ql-1727103807255.mp4?Expires=1761246541&Signature=iWcNyRKIpvfa~SanzIqtY~Hz3E6WKfffaGS-TzN75RiOC8K7SNXIJg28JN3CEm6aEnuONfyl4Ma6sa4dCJH1Q7ppcIbqAxzcx0828yKS0JzZjglBrf4B-UnHpVhGh6RMkRccPJzCGCzFtdAQb4jyQy0QaXvrh5I7Gl5YdOMmbb36X7HH2S5dYhSi0w6pcQmcz3Fd4cqfSZvzsoKSqxvPg6BCf7kzGsZzuFJipvC9VfAgZLJvAMzuZgJrB8MK1Kx-Al1-yGVZF4Hg3BKTTHD5Hc4xTAZj21weByJ9572NDx3XIalSWvNZJrimDAlE9TXgZcwNK9ceCAysxgW4N83wwQ__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
+                <video src="https://imdb-video.media-imdb.com/vi39568921/1434659607842-pgv4ql-1727103807255.mp4?Expires=1761246541&Signature=iWcNyRKIpvfa~SanzIqtY~Hz3E6WKfffaGS-TzN75RiOC8K7SNXIJg28JN3CEm6aEnuONfyl4Ma6sa4dCJH1Q7ppcIbqAxzcx0828yKS0JzZjglBrf4B-UnHpVhGh6RMkRccPJzCGCzFtdAQb4jyQy0QaXvrh5I7Gl5YdOMmbb36X7HH2S5dYhSi0w6pcQmcz3Fd4cqfSZvzsoKSqxvPg6BCf7kzGsZzuFJipvC9VfAgZLJvAMzuZgJrB8MK1Kx-Al1-yGVZF4Hg3BKTTHD5Hc4xTAZj21weByJ9572NDx3XIalSWvNZJrimDAlE9TXgZcwNK9ceCAysxgW4N83wwQ__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
             </a>
         </div>
         <section>
-            <h1>One Piece</h1>
+            <h1>Death Note</h1>
             <h3>Synopsis:</h3>
-            <p>Gold Roger was known as the "Pirate King," the strongest and most infamous being to have sailed the Grand Line. The capture and execution of Roger by the World Government brought a change throughout the world. His last words before his death revealed the existence of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece—which promises an unlimited amount of riches and fame—and quite possibly the pinnacle of glory and the title of the Pirate King. Enter Monkey Luffy, a 17-year-old boy who defies your standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate ransacking villages for fun, Luffy's reason for being a pirate is one of pure wonder: the thought of an exciting adventure that leads him to intriguing people and ultimately, the promised treasure. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach the most coveted of all fortunes—<span>One Piece.</span></p>
+            <p>
+                A shinigami, as a god of death, can kill any person—provided they see their victim's face and write their victim's name in a notebook called a Death Note. One day, Ryuk, bored by the shinigami lifestyle and interested in seeing how a human would use a Death Note, drops one into the human realm. High school student and prodigy Light Yagami stumbles upon the Death Note and—since he deplores the state of the world—tests the deadly notebook by writing a criminal's name in it. When the criminal dies immediately following his experiment with the Death Note, Light is greatly surprised and quickly recognizes how devastating the power that has fallen into his hands could be. With this divine capability, Light decides to extinguish all criminals in order to build a new world where crime does not exist and people worship him as a god. Police, however, quickly discover that a serial killer is targeting criminals and, consequently, try to apprehend the culprit. To do this, the Japanese investigators count on the assistance of the best detective in the world: a young and eccentric man known only by the name of L.
+            </p>
             <h3>Details:</h3>
             <p>
-                <span>Aired:</span> Oct 20, 1999 to Present<br>
-                <span>Premiered:</span> Fall 1999<br>
-                <span>Duration:</span> 24m<br>
-                <span>Status:</span> Currently Airing<br>
-                <span>IMDB Score:</span> 9.0/10<br>
-                <span>Genre:</span> Action, Comedy, Adventure, Drama, Fantasy, Shounen<br>
-                <span>Studio:</span> Toei Animation
+                <span>Aired:</span> Oct 4, 2006 to Jun 27, 2007<br>
+                <span>Premiered:</span> Fall 2006<br>
+                <span>Duration:</span> 23m<br>
+                <span>Status:</span> Finished Airing<br>
+                <span>IMDB Score:</span> 8.9/10<br>
+                <span>Genre:</span> Mystery, Supernatural, Police, Psychological, Thriller, Shounen<br>
+                <span>Studio:</span> Madhouse
             </p>
         </section>
     </main>
