--- a/fmab.html
+++ b/fmab.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attack on Titan</title>
+    <title>Fullmetal Alchemist:Brotherhood</title>
     <link rel="stylesheet" href="Anime-Head.css">
     <style>
         body{
             background-color: black;
+        }
+        video{
+            object-fit: fill;
         }
         main>div:nth-of-type(1){
             display: flex;
@@ -20,9 +23,6 @@
             /* position: relative; */
             /* left: 22vw; */
             margin-bottom: 10px;
-        }
-        video{
-            object-fit: fill;
         }
         .poster{
             flex: 1;
@@ -95,35 +95,26 @@
     </header>
     <main>
         <div>
-            <img class="poster" src="https://resizing.flixster.com/SEKqvD_3s-g47nWx0tsZykurPvQ=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p10873160_b_v8_aa.jpg" alt="Attack on Titan">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi3191457561/1434659607842-pgv4ql-1699022181383.mp4?Expires=1761247069&Signature=jqjuStmY~re2jHoYO9rVvmj2~d5Fqh-MP228NEU1IUQVQGL7QvEcLIH7w5YjHdbe1T33Vchz~w8ML27nngdC9axaa9lGGJ3sK-T6vptWl36JYylyliD1nrtxSarCY0G71CdfBOYbilJvBvQJKWU1DxA2jif7RL3TrunCZuXuDhkpKB4QDsroofYkHCEJXBwXx2ZG7jDzF0ZtOPtswGfEYEgVIybr2K6eq50uLfa~pgKBzwDLeJ4xFX~8qNzPbDlXmQ9hOdGrcnnjlkTzwJbeIOol96kv~9FHn0HSzwE02U27QvI8knvh2rwhbbNJoizw4H3lAM5IARpYggkaRVdD2Q__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi3191457561/1434659607842-pgv4ql-1699022181383.mp4?Expires=1761247069&Signature=jqjuStmY~re2jHoYO9rVvmj2~d5Fqh-MP228NEU1IUQVQGL7QvEcLIH7w5YjHdbe1T33Vchz~w8ML27nngdC9axaa9lGGJ3sK-T6vptWl36JYylyliD1nrtxSarCY0G71CdfBOYbilJvBvQJKWU1DxA2jif7RL3TrunCZuXuDhkpKB4QDsroofYkHCEJXBwXx2ZG7jDzF0ZtOPtswGfEYEgVIybr2K6eq50uLfa~pgKBzwDLeJ4xFX~8qNzPbDlXmQ9hOdGrcnnjlkTzwJbeIOol96kv~9FHn0HSzwE02U27QvI8knvh2rwhbbNJoizw4H3lAM5IARpYggkaRVdD2Q__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
+            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BMzNiODA5NjYtYWExZS00OTc4LTg3N2ItYWYwYTUyYmM5MWViXkEyXkFqcGc@._V1_.jpg" alt="FMAB">
+            <a class="trailer" href="https://imdb-video.media-imdb.com/vi4196311833/1434659607842-pgv4ql-1563465397646.mp4?Expires=1761244800&Signature=HGg~IeIzHeIgnSyg3uAXvqzcf-SmmCGQHKOaWMzmS8QvWx1rBsbmFoD2pNKLnXD-DZSx88CKgnAkCXE84JKI3vkfa0BSDp3QIGWaPzzaQWj4GA9GPwIF3vbzh9nZrKe1-pAfaMQjyCDslZBxIs~i3SE83Od5hIQeYXS0sc33eiUmYXmyP3f7J6t-PvYxRg~j2uWyS5xWfNCNxe-VySXnxfTFMpmh4zGbhJObWN~ibvCXJlc9qn4Eu1PUO7b4vut26rTYfLnyvza~VTNJ0HRrqH3zlY72Rfy0ags-qZYtfXutOf59EpwhlD0~Nrfb9xChlF-yWvXEpmguVOyRRoDMYg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
+                <video src="https://imdb-video.media-imdb.com/vi4196311833/1434659607842-pgv4ql-1563465397646.mp4?Expires=1761244800&Signature=HGg~IeIzHeIgnSyg3uAXvqzcf-SmmCGQHKOaWMzmS8QvWx1rBsbmFoD2pNKLnXD-DZSx88CKgnAkCXE84JKI3vkfa0BSDp3QIGWaPzzaQWj4GA9GPwIF3vbzh9nZrKe1-pAfaMQjyCDslZBxIs~i3SE83Od5hIQeYXS0sc33eiUmYXmyP3f7J6t-PvYxRg~j2uWyS5xWfNCNxe-VySXnxfTFMpmh4zGbhJObWN~ibvCXJlc9qn4Eu1PUO7b4vut26rTYfLnyvza~VTNJ0HRrqH3zlY72Rfy0ags-qZYtfXutOf59EpwhlD0~Nrfb9xChlF-yWvXEpmguVOyRRoDMYg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
             </a>
         </div>
         <section>
-            <h1>Attack on Titan</h1>
+            <h1>Fullmetal Alchemist: Brotherhood</h1>
             <h3>Synopsis:</h3>
             <p>
-                Centuries ago, mankind was slaughtered to near extinction by monstrous humanoid creatures called titans, forcing humans to hide 
-                in fear behind enormous concentric walls. What makes these giants truly terrifying is that their taste for human flesh is not 
-                born out of hunger but what appears to be out of pleasure. To ensure their survival, the remnants of humanity began living 
-                within defensive barriers, resulting in one hundred years without a single titan encounter. However, that fragile calm is soon 
-                shattered when a colossal titan manages to breach the supposedly impregnable outer wall, reigniting the fight for survival 
-                against the man-eating abominations. After witnessing a horrific personal loss at the hands of the invading creatures, 
-                Eren Yeager dedicates his life to their eradication by enlisting into the Survey Corps, an elite military unit that combats the 
-                merciless humanoids outside the protection of the walls. Based on Hajime Isayama's award-winning manga, Shingeki no Kyojin 
-                follows Eren, along with his adopted sister Mikasa Ackerman and his childhood friend Armin Arlert, as they join the brutal war 
-                against the titans and race to discover a way of defeating them before the last walls are breached.
+                "In order for something to be obtained, something of equal value must be lost." Alchemy is bound by this Law of Equivalent Exchange—something the young brothers Edward and Alphonse Elric only realize after attempting human transmutation: the one forbidden act of alchemy. They pay a terrible price for their transgression—Edward loses his left leg, Alphonse his physical body. It is only by the desperate sacrifice of Edward's right arm that he is able to affix Alphonse's soul to a suit of armor. Devastated and alone, it is the hope that they would both eventually return to their original bodies that gives Edward the inspiration to obtain metal limbs called "automail" and become a state alchemist, the Fullmetal Alchemist. Three years of searching later, the brothers seek the Philosopher's Stone, a mythical relic that allows an alchemist to overcome the Law of Equivalent Exchange. Even with military allies Colonel Roy Mustang, Lieutenant Riza Hawkeye, and Lieutenant Colonel Maes Hughes on their side, the brothers find themselves caught up in a nationwide conspiracy that leads them not only to the true nature of the elusive Philosopher's Stone, but their country's murky history as well. In between finding a serial killer and racing against time, Edward and Alphonse must ask themselves if what they are doing will make them human again... or take away their humanity.
             </p>
             <h3>Details:</h3>
             <p>
-                <span>Aired:</span> April 7, 2013, to November 5, 2023<br>
-                <span>Premiered:</span> Spring 2013<br>
+                <span>Aired:</span> Apr 5, 2009 to Jul 4, 2010<br>
+                <span>Premiered:</span> Spring 2009<br>
                 <span>Duration:</span> 24m<br>
                 <span>Status:</span> Finished Airing<br>
                 <span>IMDB Score:</span> 9.1/10<br>
-                <span>Genre:</span> Action, Mystery, Military, Drama, Fantasy, Shounen<br>
-                <span>Studio:</span> Wit Studio, MAPPA
+                <span>Genre:</span> Action, Adventure, Comedy, Drama, Magic, Military, Fantasy, Shounen<br>
+                <span>Studio:</span> Bones
             </p>
         </section>
     </main>
