--- a/tybw.html
+++ b/tybw.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Piece</title>
+    <title>Bleach:TYBW</title>
     <link rel="stylesheet" href="Anime-Head.css">
     <style>
         body{
@@ -95,24 +95,26 @@
     </header>
     <main>
         <div>
-            <img class="poster" src="https://m.media-amazon.com/images/M/MV5BMTNjNGU4NTUtYmVjMy00YjRiLTkxMWUtNzZkMDNiYjZhNmViXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="One Piece">
-            <a class="trailer" href="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
-                <video src="https://imdb-video.media-imdb.com/vi1913960985/1434659607842-pgv4ql-1564065260545.mp4?Expires=1761247114&Signature=nhC4OLdr9ynGRUfc6MlEFdzIB~WKWBtfBbYfV8FBbv~NK9FIWmYzxcNLFdVJ4oQi3avZebmCtEcNh6tegqZyMCa~LwDXDoIbPOQNtAOEE4hpxnjn2S-ZM5YNysUyfiJyPwc4GUB8WJo-NSwhfZdd8uZW52-cvqLY~-ALnrTwYPfsv3lx6r40Z4At7rLiWbFIoauG5HiEc0ZOAwoEuzR7rULxBmogJJt~e2tIGdM3aiE6XAOa4l4e7UoLYEZKfBeFp-CQq32nu-XU1FIeN5RMDb5BbeI3N~PSuntLiVOgzNATDei0khwTU-W-5N5TY3TZ3gCgKCYYsKd3jXqbvSPFRg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
+            <img class="poster" src="https://cdn.myanimelist.net/images/anime/1908/135431.jpg" alt="Bleach: TYBW">
+            <a class="trailer" href="https://imdb-video.media-imdb.com/vi1135068441/1434659607842-pgv4ql-1666357386723.mp4?Expires=1761245944&Signature=c7ViQISQqULX-y5OjhYPGudRXljlbGYN1Vnor5sxFP5Ct7EPHWMtu3vifeMX9AS1lKpwNzc7ieIll~APPpwodl8j~h7DTnloEU4-Rhko3PgscN53Lu5vTCxZbTXECAPBV3QO7tUPT5VGuoUEUOil~Dc1c2fQvWKraJbhbc-uiAw-NHKsqhf~Lx899rnlLQTH8mJ6EykxtDChptbAR1Od5150Lwiz1VhOz8889L65oyfyHRgOwCGBUV0llnjLzBnhSdAJZHXBkxbz2jFIzBW7yRdq8NZlyUVdit5hN~PkLY3rDAzC9bgebN3RVmQVSlVIq5iweoxLW5SuzgWglIqfWg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" target="_blank">
+                <video src="https://imdb-video.media-imdb.com/vi1135068441/1434659607842-pgv4ql-1666357386723.mp4?Expires=1761245944&Signature=c7ViQISQqULX-y5OjhYPGudRXljlbGYN1Vnor5sxFP5Ct7EPHWMtu3vifeMX9AS1lKpwNzc7ieIll~APPpwodl8j~h7DTnloEU4-Rhko3PgscN53Lu5vTCxZbTXECAPBV3QO7tUPT5VGuoUEUOil~Dc1c2fQvWKraJbhbc-uiAw-NHKsqhf~Lx899rnlLQTH8mJ6EykxtDChptbAR1Od5150Lwiz1VhOz8889L65oyfyHRgOwCGBUV0llnjLzBnhSdAJZHXBkxbz2jFIzBW7yRdq8NZlyUVdit5hN~PkLY3rDAzC9bgebN3RVmQVSlVIq5iweoxLW5SuzgWglIqfWg__&Key-Pair-Id=APKAIFLZBVQZ24NQH3KA" autoplay muted loop></video>
             </a>
         </div>
         <section>
-            <h1>One Piece</h1>
+            <h1>Bleach: Thousand Year Blood War</h1>
             <h3>Synopsis:</h3>
-            <p>Gold Roger was known as the "Pirate King," the strongest and most infamous being to have sailed the Grand Line. The capture and execution of Roger by the World Government brought a change throughout the world. His last words before his death revealed the existence of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece—which promises an unlimited amount of riches and fame—and quite possibly the pinnacle of glory and the title of the Pirate King. Enter Monkey Luffy, a 17-year-old boy who defies your standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate ransacking villages for fun, Luffy's reason for being a pirate is one of pure wonder: the thought of an exciting adventure that leads him to intriguing people and ultimately, the promised treasure. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach the most coveted of all fortunes—<span>One Piece.</span></p>
+            <p>
+                Substitute Soul Reaper Ichigo Kurosaki spends his days fighting against Hollows, dangerous evil spirits that threaten Karakura Town. Ichigo carries out his quest with his closest allies: Orihime Inoue, his childhood friend with a talent for healing; Yasutora Sado, his high school classmate with superhuman strength; and Uryuu Ishida, Ichigo's Quincy rival. Ichigo's vigilante routine is disrupted by the sudden appearance of Asguiaro Ebern, a dangerous Arrancar who heralds the return of Yhwach, an ancient Quincy king. Yhwach seeks to reignite the historic blood feud between Soul Reaper and Quincy, and he sets his sights on erasing both the human world and the Soul Society for good. Yhwach launches a two-pronged invasion into both the Soul Society and Hueco Mundo, the home of Hollows and Arrancar. In retaliation, Ichigo and his friends must fight alongside old allies and enemies alike to end Yhwach's campaign of carnage before the world itself comes to an end.
+            </p>
             <h3>Details:</h3>
             <p>
-                <span>Aired:</span> Oct 20, 1999 to Present<br>
-                <span>Premiered:</span> Fall 1999<br>
-                <span>Duration:</span> 24m<br>
-                <span>Status:</span> Currently Airing<br>
+                <span>Aired:</span> Oct 10, 2022 to Dec 27, 2022<br>
+                <span>Premiered:</span> Fall 2022<br>
+                <span>Duration:</span> 23m<br>
+                <span>Status:</span> Finished Airing<br>
                 <span>IMDB Score:</span> 9.0/10<br>
-                <span>Genre:</span> Action, Comedy, Adventure, Drama, Fantasy, Shounen<br>
-                <span>Studio:</span> Toei Animation
+                <span>Genre:</span> Action, Adventure, Comedy, Drama, Shounen<br>
+                <span>Studio:</span> Studio Pierrot
             </p>
         </section>
     </main>
