--- a/onepiece.html
+++ b/onepiece.html
@@ -5,61 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece</title>
     <link rel="stylesheet" href="Anime-Head.css">
-    <style>
-        body{
-            background-color: black;
-        }
-        main>div:nth-of-type(1){
-            display: flex;
-            height: 50vh;
-            gap: 15px;
-            padding: 10px;
-            /* margin: auto; */
-            width: 80vw;
-            margin-left: 19vw;
-            /* position: relative; */
-            /* left: 22vw; */
-            margin-bottom: 10px;
-        }
-        .poster{
-            flex: 1;
-            border-radius: 10px;
-        }
-        .trailer{
-            flex: 3;
-        }
-        .trailer>video{
-            /* width: 100%; */
-            height: 100%;
-            border-radius: 10px;
-        }
-        section{
-            margin-bottom: 20px;
-            /* background-color: black; */
-            padding: 10px;
-        }
-        section>h1{
-            /* position: relative; */
-            /* left: 25vw; */
-            color: gold;
-            margin-bottom: 10px;
-        }
-        section>h3{
-            margin-bottom: 10px;
-        }
-        section>p{
-            margin-bottom: 20px;
-        }
-        section>p>span{
-            font-style: italic;
-            /* text-align: center; */
-            font-weight: bold;
-            color: rgb(168, 146, 9);
-        }
-        video{
-            object-fit: fill;
-        }
-    </style>
+    <link rel="stylesheet" href="anime-page.css">
 </head>
 <body>
     <header>
